add steamos repos

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -103,3 +103,11 @@ Server = https://repo.blendos.co/$repo/os/$arch
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+[jupiter]
+Server = https://steamdeck-packages.steamos.cloud/archlinux-mirror/$repo/os/$arch
+SigLevel = Never
+
+[holo]
+Server = https://steamdeck-packages.steamos.cloud/archlinux-mirror/$repo/os/$arch
+SigLevel = Never
